# ros2-brain-agent

./: .env.example  .gitignore  Dockerfile  README.md  README_CN.md  docker-compose.yml  pyproject.toml  run_docker.sh  需求文档-v0.1.0-20260217.md
configs/: logging.yaml  providers.yaml  tools.yaml
docs/: ROS2_COMMANDS.md  TEST_DEMO.md
scripts/: dialog_viewer.py  dialog_web.py  event_viewer.py  monitor.py  quick_test.sh  ros2_bridge_client.py  run_tests.sh
tests/: test_filesystem_store.py  test_llm_provider.py
