[project]
name = "ros2-brain-agent"
version = "0.1.0"
description = "A Governable Brain-Cerebellum Agent Architecture for ROS2"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
